--- a/2주차 (24.05.22)/2주차 과제 파일/yotube_clone.css
+++ b/2주차 (24.05.22)/2주차 과제 파일/yotube_clone.css
@@ -1,9 +1,17 @@
+/* reset css 참조 */
 @import "./reset.css";
 
-/* 헤더의 요소들 위치 배치 */
-.container_row{
+/* 어사이드 테두리 설정 */
+.aside_shape{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    position: fixed;
+    width: 80px;
+    height: 100%;
+    color: #626262;
+    margin-top: 5px;
+    font-size: 13px;
+    text-align: center;
 }
 
 /* 어사이드의 요소들 위치 배치 */
@@ -12,60 +20,52 @@
     flex-direction: column;
 }
 
-/* 아이템들 가운데 정렬하기 */
+/* 어사이드 이미지 파일 설정*/
+.aside_img{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+.aside_img_margin_top{
+    margin-top: 5px;
+}
+
+
+/* 헤더 설정 */
+
+/* 어사이드와 거리를 위함 */
+#main_group{
+    margin-left: 80px;
+}
+
+
+/* 헤더의 요소들 위치 배치 */
+.container_row{
+    display: flex;
+    flex-direction: row;
+}
+
+/* 헤더 아이템들 가운데 정렬하기 */
 .headerimg_center{
     display: flex;
     justify-content: space-between;
     align-content: center;
 }
 
-/* 아이템들 가운데 정렬하기 */
-.container_center{
+/* 검색창 바깥 테두리 */
+#search_out_shape{
+    max-width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex:1;
 }
 
-#search_out_shape{
-    max-width: 60%;
-}
-
-.h100{
-    height: 100%;
-}
-
-.w20{
-    width: 20%;
-}
-.aside_width{   
-    width:40%;
-}
-.aside_margin_top{
-    margin-top: 30px;
-}
-
-.aside_img_margin_top{
-    margin-top: 5px;
-}
-.header_img_margin_left{
-    margin-left: 10px;
-}
-
-.margin_img{
-    margin: 0px 10px;
-}
-
-/* 어사이드 설정 */
-.sidebar_shape{
-    position: fixed;
-    width: 80px;
-}
-
-
-
-/* 가로 아이템간 간격 두기  */
-.margin_item{
-    margin-left: 10px;
+/* 헤더 빈공간 */
+#space{
+    width: 70px;
 }
 
 /* 검색창 꾸미기 */
@@ -79,31 +79,8 @@
     height: 80%;
     z-index: 1;
 }
-#search_btn_text{
-    font-size: 15px;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    border: none;
-    z-index: -1;
-    width: 100%;
-    color: black;
-    outline: none;
-}
 
-#search_btn{
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-    border-style: solid ;
-    border-color: #CCCCCC;
-    border-width: 1px;
-    text-align: right;
-}
-
-#keyboard_btn{
-    border: none;
-    align-items: center;
-}
-
+/* 검색 버튼 제외 검색창 */
 #search_form{
     display: flex;
     border-style: solid;
@@ -116,30 +93,78 @@
     z-index: 2;
 }
 
-/* 화면이 줄어들면 자연스럽게 줄어들게 하기 위함 */
-.container_shirink{
-    flex: 1;
+/* 검색버튼 누르면 생기는 아이콘 */
+#search_event_btn{
+    border-radius: 30px;
+    border: #CCCCCC;
+    align-items: center;
+    display: none;
+}
+#search_event_btn_img{
+    width: 40px;
+    object-fit: cover;
 }
 
+/* text입력할 수 있는 검색창*/
+#search_btn_text{
+    font-size: 15px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border: none;
+    z-index: -1;
+    width: 100%;
+    color: black;
+    outline: none;
+}
+
+/* 키보드 버튼 셋팅 */
+#keyboard_btn{
+    border: none;
+    align-items: center;
+}
+
+/* 검색버튼 */
+#search_btn{
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-style: solid ;
+    border-color: #CCCCCC;
+    border-width: 1px;
+    text-align: right;
+}
+
+/* 좌우 마진용 */
+.margin_img{
+    margin: 0px 10px;
+}
+
+/* 메인화면 가장 바깥 테두리 */
 #main{
     margin-top: 10px;
     display: flex;
     flex-wrap: wrap;
 }
 
+/* 메인화면 큰테두리 */
 .main_group_shape{
     display: flex;
-    flex: 1 1 300px;
+    flex: 1;
     flex-direction: column;
     margin-right: 10px;
+    min-width: 300px;
 }
 
-.main_img{
-    object-fit: cover;
+/* 메인화면 조회수 글자 폰트 */
+.text_font{
+    color: #626262;
+    margin-top: 5px;
+    font-size: 13px;
 }
 
+/* 아이템들 가운데 정렬하기 */
+.container_center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-#main_group{
-    margin-left: 80px;
 }
-
