--- a/2주차 (24.05.22)/2주차 과제 파일/yotube_clone.css
+++ b/2주차 (24.05.22)/2주차 과제 파일/yotube_clone.css
@@ -168,3 +168,11 @@
     align-items: center;
 
 }
+
+/* 제목 두줄 제한 */
+.main_text_line{
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
