--- a/2주차 (24.05.22)/2주차 과제 파일/yotube_clone.css
+++ b/2주차 (24.05.22)/2주차 과제 파일/yotube_clone.css
@@ -1,6 +1,10 @@
 /* reset css 참조 */
 @import "./reset.css";
 
+body{
+    overflow-x: hidden;
+}
+
 /* 어사이드 테두리 설정 */
 .aside_shape{
     display: flex;
@@ -68,6 +72,10 @@
     width: 70px;
 }
 
+.cursor_pointer{
+    cursor: pointer;
+}
+
 /* 검색창 꾸미기 */
 #search_shape{
     display: flex;
@@ -91,6 +99,7 @@
     width: 100%;
     height: 100%;
     z-index: 2;
+
 }
 
 /* 검색버튼 누르면 생기는 아이콘 */
@@ -105,7 +114,6 @@
 #search_event_btn_img{
     width: 25px;
     object-fit: cover;
-    
 }
 
 /* text입력할 수 있는 검색창*/
