--- a/2주차 (24.05.22)/2주차 과제 파일/yotube_clone.css
+++ b/2주차 (24.05.22)/2주차 과제 파일/yotube_clone.css
@@ -20,12 +20,7 @@ body{
     margin-top: 5px;
     font-size: 13px;
     text-align: center;
-}
-
-/* 어사이드의 요소들 위치 배치 */
-.container_column{
-    display: flex;
-    flex-direction: column;
+    top: 0;
 }
 
 /* 어사이드 이미지 파일 설정*/
@@ -45,7 +40,9 @@ body{
 
 /* 어사이드와 거리를 위함 */
 #main_group{
-    margin-left: 80px;
+    background-color: white;
+    top: 0;
+    left: 80px;
 }
 
 
@@ -89,7 +86,6 @@ body{
     border-radius: 30px;
     width: 100%;
     height: 80%;
-    z-index: 1;
 }
 /* z 인덱스 제외할것  */
 
@@ -103,8 +99,6 @@ body{
     border-top-left-radius: 30px;
     width: 100%;
     height: 100%;
-    z-index: 2;
-
 }
 
 /* 검색버튼 누르면 생기는 아이콘 */
@@ -128,7 +122,6 @@ body{
     border-bottom-left-radius: 30px;
     border: none;
     outline: none;
-    z-index: -1;
     width: 100%;
     color: black;
     
@@ -166,19 +159,22 @@ body{
 }
 
 /* 메인화면 가장 바깥 테두리 */
-#main{
-    margin-top: 10px;
+#main_thumb{
     display: flex;
     flex-wrap: wrap;
+    margin-left: 80px;
+    margin-top: 50px;
 }
 
 /* 메인화면 큰테두리 */
 .main_group_shape{
     display: flex;
-    flex: 1;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    width: 300px;
     flex-direction: column;
     margin-right: 10px;
-    min-width: 300px;
     cursor: pointer;
 }
 
@@ -204,3 +200,20 @@ body{
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+/* 
+flex-basis
+기본값을 설정한다
+https://dev-chim.tistory.com/entry/CSS-Flexbox-flex-basis-width
+
+원래 크기 width를 지정해주어야 값이 먹힌다
+auto로 두면 원래 크기가 basis가 된다 
+
+flex-grow
+-> basis 보다 커질수 있냐
+
+flex-shrink
+-> basis 값보다 작아질 수 있냐
+-> 0 보다 큰값이 들어가면 유연해진다
+-> 고정 크기를 만들려면 0을 사용하면됨
+
+*/
