--- a/5주차 (24.06.12)/5주차 파일/instargram.css
+++ b/5주차 (24.06.12)/5주차 파일/instargram.css
@@ -35,7 +35,21 @@
     display: none;
 } */
 
-@import "./reset.css";
+@import url('https://fonts.googleapis.com/css2?family=Jua&family=Orbit&display=swap');
+* {
+    font-family: "Orbit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: white;
+  }
+/* @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap'); */
+/* *{
+    font-family: "Jua", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+  }
+
+@import "./reset.css"; */
 
 .html,body{
     background-color: black;
@@ -55,29 +69,20 @@
     border-bottom: none;
 
 }
-#friend_aside{
-    position: fixed;
-    width: 10%;
-    height: 100%;
-    margin-left: 90%;
-    background-color: green;
-    top: 0;
 
-}
 #story_header{
-    margin-left: 20%;
     position: fixed;
-    width: 80%;
+    width: 100%;
     height: 100px;
-    background-color: red;
+    background-color: black;
+    border-bottom: solid 1px;
+    border-left: solid 1px;
+    border-color: white;
     top: 0;
+    display: flex;
+    flex: 1;
 }
-#posting_main{
-    margin-left: 20%;
-    width: 80%;
-    height: 100%;
-    background-color: yellow;
-}
+
 #funciton_footer{
     display: none;
 }
@@ -100,8 +105,28 @@
     width: 100%;
     flex-direction: row;
     align-items: center;
-}
-.logo_text{
-    color: white;
+    transition: all 0.2s linear;
+    overflow: hidden;
     cursor: pointer;
+}
+.logo_text_box:hover{
+    opacity: 0.4;
+    transform: scale(1.2);
+}
+
+
+#posting_main{
+    margin-top: 100px;
+    height: 100%;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.post_box{
+    width: 500px;
+    height: 700px;
+    background-color: white;
+    margin-bottom: 20px;
 }
