--- a/5주차 (24.06.12)/5주차 파일/week5_report/instargram.css
+++ b/5주차 (24.06.12)/5주차 파일/week5_report/instargram.css
@@ -53,6 +53,7 @@
 
 .html,body{
     background-color: black;
+    overflow-x: hidden;
 }
 .funciton_aside{
     width: 160px;
@@ -164,6 +165,8 @@
 }
 
 .title_icon{
+    transition: all 0.2s linear;
+    overflow: hidden;
     width: 40px;
 }
 .title_icon:hover{
@@ -176,7 +179,7 @@
 }
 .title_icon_btn{
     border: none;
-    background-color: black;
+    background-color: #00ff0000;
     cursor: pointer;
 }
 .post_title_sentence{
@@ -201,10 +204,30 @@
 }
 .footer_icon{
     width: 30px;
+    transition: all 0.2s linear;
+    overflow: hidden;
 }
-
+.footer_icon:hover{
+    opacity: 0.4;
+    transform: scale(1.2);
+}
 .footer_btn{
-    background-color: black;
+    background-color: #00ff0000;
     cursor: pointer;
     border: none;
+}
+
+.post_thumb{
+    width: 65%;
+}
+
+.post_title_thumb{
+    width: 30px;
+    background-color: white;
+}
+
+.post_user{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
