--- a/5주차 (24.06.12)/5주차 과제/week5_report/instargram.css
+++ b/5주차 (24.06.12)/5주차 과제/week5_report/instargram.css
@@ -5,7 +5,7 @@
     font-weight: 400;
     font-style: normal;
     color: white;
-  }
+}
 
 .html,body{
     background-color: black;
@@ -48,6 +48,11 @@
     width: 50px;
     height: 50px;
     margin: 10px;
+    display: flex;
+    flex: 1;
+}
+.hedaer_story_user:hover{
+    transform: scale(1.2);
 }
 
 .aside_icon{
