--- a/7주차(24.07.03)/ROOT/css/instargram.css
+++ b/7주차(24.07.03)/ROOT/css/instargram.css
@@ -17,8 +17,8 @@ body {
 #page_container {
   display: grid;
   grid-template-areas:
-    "aside_left header aside_right"
-    "aside_left main aside_right";
+    "aside_left header "
+    "aside_left main ";
 }
 /* vh 사용  */
 #funciton_aside {
@@ -42,7 +42,7 @@ body {
   }
 } */
 
-#category_aside {
+/* #category_aside {
   grid-area: aside_right;
   width: 160px;
   height: 100%;
@@ -71,11 +71,11 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 40px;
-}
+} */
 
 #story_header {
   grid-area: header;
-  width: 800px;
+  width: 100%;
   height: 60px;
   cursor: pointer;
   background-color: black;
@@ -125,9 +125,8 @@ body {
 
 #posting_main {
   grid-area: main;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  height: 800px;
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
@@ -140,7 +139,6 @@ body {
 .post_box {
   width: 750px;
   height: 530px;
-  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   margin-left: 30px;
@@ -273,5 +271,26 @@ body {
   }
   100% {
     filter: brightness(0%);
+  }
+}
+
+@keyframes width_to_100 {
+  from {
+    width: 0%;
+    opacity: 0;
+    margin-left: 50vh;
+  }
+  to {
+    opacity: 1;
+    margin-left: 0;
+  }
+}
+
+@keyframes margin_event {
+  from {
+    margin-top: 0;
+  }
+  to {
+    margin-top: 50px;
   }
 }
