--- a/7주차(24.07.03)/ROOT/css/login_page.css
+++ b/7주차(24.07.03)/ROOT/css/login_page.css
@@ -22,10 +22,10 @@ body {
   white-space: nowrap;
 }
 
-#find_container {
+.except_login_container {
   width: 0%;
   height: 0;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -34,7 +34,9 @@ body {
   overflow: hidden;
   position: relative;
 }
-
+.except_login_container * {
+  white-space: nowrap;
+}
 .child {
   width: 100%;
   height: 100%;
@@ -58,6 +60,10 @@ body {
   background-color: #161616;
   color: white;
   line-height: 30px;
+}
+
+#gender_container {
+  position: fixed;
 }
 
 .placehorder {
@@ -102,7 +108,7 @@ body {
   }
 }
 
-.tmp_btn {
+.blue_btn {
   width: 300px;
   height: 30px;
   background-color: #3875b9;
@@ -114,13 +120,13 @@ body {
   cursor: pointer;
 }
 
-.find_btn {
+.text_btn {
   justify-content: end;
   background-color: rgba(0, 0, 0, 0);
   border: none;
   cursor: pointer;
-  margin-bottom: 200px;
   color: #bccad7;
+  margin: 5px;
 }
 
 #tmp_bot {
@@ -170,4 +176,42 @@ from에 처음 넣어놓은게 중첩되니까 인지하고 사용하자
     margin-top: 0;
     opacity: 1;
   }
+}
+
+@keyframes width_to_0123 {
+  from {
+    width: 0%;
+    opacity: 0;
+  }
+  to {
+    height: 100vh;
+    opacity: 1;
+  }
+}
+
+#gender_container {
+  display: flex;
+  flex-direction: row;
+}
+.gender_box {
+  margin: 5px;
+  color: white;
+}
+
+/* // 기본스타일을 없애고, 버튼모양을 구현한다. */
+input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  border: 1px solid white;
+  border-radius: 3px;
+  outline: none;
+  cursor: pointer;
+}
+input[type="radio"]:checked {
+  background-color: white;
+  border: 3px solid white;
+  box-shadow: 0 0 0 1.6px #161616;
 }
