--- a/심화/1주차 (24.08.09)/1주차 과제/ROOT/component/aside/aside_icon/icon.css
+++ b/심화/1주차 (24.08.09)/1주차 과제/ROOT/component/aside/aside_icon/icon.css
@@ -3,8 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
   border: none;
   background-color: #00ff0000;
   cursor: pointer;
+  width: 100%;
+  height: 64px;
+  border-radius: 3px;
+  margin: 1px;
+}
+.icon_logo:hover {
+  background-color: #b2b2b2;
 }
